# OctoPrint-LightToggle

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
OctoPrint_Lighttoggle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
extras/: README.txt  lighttoggle.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_lighttoggle/: __init__.py
octoprint_lighttoggle/static/js/: lighttoggle.js
octoprint_lighttoggle/templates/: lighttoggle_navbar.jinja2  lighttoggle_sidebar.jinja2
translations/: README.txt
